fix horizontal scrollbars

--- a/client/styles/tournament.less
+++ b/client/styles/tournament.less
@@ -4,7 +4,7 @@
   right: 0;
   left: 0;
   bottom: 0;
-  overflow: scroll;
+  overflow-y: scroll;
 
   background: @violet;
   color: @white;
